--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,14 @@
-{
-	"root": true,
-	"indent_style": "tab",
-	"tab_size": 2,
-	"translate_tabs_to_spaces": true,
-	"charset": "utf-8",
-	"insert_final_newline": true,
-	"trim_trailing_whitespace": true,
-	"trim_trailing_white_space_on_save": true
-}
+# EditorConfig is awesome: http://EditorConfig.org
+
+# top-most EditorConfig file
+root = true
+
+[*]
+end_of_line = lf
+charset = utf-8
+# remove any whitespace characters preceding newline characters
+trim_trailing_whitespace = true
+# ensure file ends with a newline when saving
+insert_final_newline = true
+indent_style = space
+indent_size = 2
