--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "keywords": [
     "utils",
     "javascript",
-    "functions"
+    "functions",
+    "css"
   ],
   "author": "cuiyang",
   "license": "ISC",
